fix overflow in mobile by changing items to flex-box and achieved a better Animation on Scroll

--- a/src/components/Entry.css
+++ b/src/components/Entry.css
@@ -157,12 +157,13 @@
 
 .navMenuContainer {
   position: fixed;
-  bottom: 20px;
+  bottom: 30px;
   left: 50%;
+  /* right: 50%; */
   transform: translateX(-50%);
 
   background: linear-gradient(#3434ca, #084280);
-  padding: 20px 30px;
+  padding: 20px 20px;
   border-radius: 140px;
   opacity: 0.9;
 
@@ -180,9 +181,11 @@
   /* padding: 8px 10px; */
   margin: 0 8px;
   transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
-  border-radius: 50%;
+  padding: 10px;
+  border-radius: 10px;
+  /* border-radius: 50%;
   width: 40px;
-  height: 40px;
+  height: 40px; */
 }
 .navMenuContainer button:hover {
   background: #020260;
@@ -327,7 +330,7 @@
   grid-row: 1 / 4; */
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 .work_exp > .work_exp_auto:hover, .work_exp_auto2:hover{
   background: #0f2236;
@@ -358,10 +361,17 @@
   padding: 4px 8px;
   border-radius: 8px;
 }
-.tech_used > span{
-  background: var(--clr-dark);
+
+.tech_used_illustrate{
+  display: flex;
+  /* justify-content: space-between; */
+  flex-wrap: wrap;
+  /* gap: 10px 15px; */
+}
+.tech_used_illustrate> span{
+  background: #29496b;
   border-radius: 5px;
-  margin: 10px 10px 0 0;
+  margin: 10px 15px 5px 0;
   padding: 5px;
 }
 
